kubernetes/apps/home-infra/matrix-hookshot/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: matrix-hookshot-webhooks
spec:
  hostnames:
    - hookshot.${DOMAIN_NAME}
  parentRefs:
    - name: envoy-external
      namespace: envoy-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /generic/
      backendRefs:
        - name: matrix-hookshot
          port: 9000
